--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PDF保管庫的場</title>
+  <link rel="icon" href="favicon.png" type="image/png">
 
   <style>
     body{
@@ -139,3 +140,4 @@
 
 </body>
 </html>
+
