--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PDF保管庫的場</title>
-  <link rel="icon" href="favicon.png" type="image/png">
+  
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
 
   <style>
     body{
@@ -140,4 +144,5 @@
 
 </body>
 </html>
+
 
