--- a/index.html
+++ b/index.html
@@ -109,10 +109,13 @@
     <div class="title">
       <strong>接線｜理解度チェック</strong>
       <span class="tag">問題</span>
+      <span class="tag">練習</span>
     </div>
 
     <div class="links">
      <a href="./pdf/tangent_line_check.pdf">問題PDF</a>
+     <span class="seq">|</span>
+     <a href="./pdf/tangent_pr.pdf">練習PDF</a>
     </div>
   </div>
 
@@ -144,6 +147,7 @@
 
 </body>
 </html>
+
 
 
 
