--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
     </div>
 
     <div class="links">
-     <a href="./pdf/recurrence_check.pdf">問題PDF</a>
+     <a href="./pdf/recurrence_c.pdf">問題PDF</a>
      <span class="seq">|</span>
-     <a href="./pdf/reccurrence_answer.pdf">解答PDF</a>
+     <a href="./pdf/reccurrence_a.pdf">解答PDF</a>
     </div>
   </div>
 
@@ -100,11 +100,11 @@
     </div>
 
     <div class="links">
-     <a href="./pdf/log_check.pdf">問題PDF</a>
+     <a href="./pdf/log_c.pdf">問題PDF</a>
      <span class="seq">|</span>
-     <a href="./pdf/tangent_pr.pdf">練習PDF</a>
+     <a href="./pdf/log_a.pdf">練習PDF</a>
      <span class="seq">|</span>
-     <a href="./pdf/log_quiz.pdf">チェックPDF</a>
+     <a href="./pdf/log_q.pdf">チェックPDF</a>
     </div>
   </div>
 
@@ -116,7 +116,7 @@
     </div>
 
     <div class="links">
-     <a href="./pdf/diffentiation_check.pdf">問題PDF</a>
+     <a href="./pdf/differentiation_c.pdf">問題PDF</a>
     </div>
   </div>
 
@@ -128,9 +128,9 @@
     </div>
 
     <div class="links">
-     <a href="./pdf/tangent_line_check.pdf">問題PDF</a>
+     <a href="./pdf/tangent_line_c.pdf">問題PDF</a>
      <span class="seq">|</span>
-     <a href="./pdf/tangent_pr.pdf">練習PDF</a>
+     <a href="./pdf/tangent_p.pdf">練習PDF</a>
     </div>
   </div>
 
@@ -163,6 +163,7 @@
 
 </body>
 </html>
+
 
 
 
