--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
      <a href="./pdf/6tan.pdf">6PDF</a>
     </div>
 <div class="links">
-     <a href="./pdf/6tan.pdf">tPDF</a>
+     <a href="./pdf/6tan2.pdf">tPDF</a>
     </div>
   
     <div class="links">
@@ -170,6 +170,7 @@
 
 </body>
 </html>
+
 
 
 
