--- a/index.html
+++ b/index.html
@@ -4,73 +4,41 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PDF保管庫的場</title>
-  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="apple-touch-icon" type="180x180" href="apple-touch-icon.png">
-
-
   <style>
-    body{
-      font-family:system-ui, sans-serif;
-      max-width:900px;
-      margin:40px auto;
-      padding:0 16px;
-      line-height:1.6;
-      background:#000;
-      color:#eaeaea;
-    }
-
-    h1{
-      margin:0 0 12px;
-    }
-
-    .meta{
-      color:#aaa;
-      font-size:14px;
-      margin-bottom:24px;
-    }
-
-    .card{
-      border:1px solid #333;
-      border-radius:12px;
-      padding:12px 16px;
-      margin:10px 0;
-      background:#111;
-      box-shadow:0 0 0 1px #222;
-    }
-
-      .title{
-      margin-bottom:6px;
-    }
-
-    .links{
-      font-size:14px;
-    }
-
-    .sep{
-      margin:0 8px;
-      color:#999;
-    }
-
-    a{
-      color:#7aa2ff;
-      text-decoration:none;
-    }
-
-    a:hover{
-      text-decoration:underline;
-    }
-
-    .tag{
-      display:inline-block;
-      font-size:12px;
-      color:#ddd;
-      background:#222;
-      padding:2px 8px;
-      border-radius:999px;
-      margin-left:8px;
-    }
+    body{font-family:system-ui, sans-serif;
+         max-width:900px;
+         margin:40px auto;
+         padding:0 16px;
+         line-height:1.6;
+         background:#000;
+         color:#eaeaea;}
+    h1{margin:0 0 12px;}
+    .meta{color:#aaa;
+          font-size:14px;
+          margin-bottom:24px;}
+    .card{border:1px solid #333;
+          border-radius:12px;
+          padding:12px 16px;
+          margin:10px 0;
+          background:#111;
+          box-shadow:0 0 0 1px #222;}
+    .title{margin-bottom:6px;}
+    .links{font-size:14px;}
+    .sep{margin:0 8px;
+         color:#999;}
+    a{color:#7aa2ff;
+      text-decoration:none;}
+    a:hover{text-decoration:underline;}
+    .tag{display:inline-block;
+         font-size:12px;
+         color:#ddd;
+         background:#222;
+         padding:2px 8px;
+         border-radius:999px;
+         margin-left:8px;}
   </style>
 </head>
 
@@ -173,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
