--- a/index.html
+++ b/index.html
@@ -41,18 +41,13 @@
          margin-left:8px;}
   </style>
 </head>
-
 <body>
   <h1>PDF保管庫的場</h1>
-  <div class="meta">塾用プリント（閲覧・印刷用）</div>
-
+  
   <div class="card">
     <div class="title">
-      <strong>数列｜理解度チェック</strong>
-      <span class="tag">問題</span>
-      <span class="tag">解答</span>
+      <strong>数列</strong>
     </div>
-
     <div class="links">
      <a href="./pdf/recurrence_c.pdf">問題PDF</a>
      <span class="seq">|</span>
@@ -62,11 +57,8 @@
 
   <div class="card">
     <div class="title">
-      <strong>対数｜理解度チェック</strong>
-      <span class="tag">問題</span>
-      <span class="tag">解答</span>
+      <strong>対数</strong>
     </div>
-
     <div class="links">
      <a href="./pdf/log_c.pdf">問題PDF</a>
      <span class="seq">|</span>
@@ -78,11 +70,8 @@
 
   <div class="card">
     <div class="title">
-      <strong>微分｜理解度チェック</strong>
-      <span class="tag">問題</span>
-      <span class="tag">解答</span>
+      <strong>微分</strong>
     </div>
-
     <div class="links">
      <a href="./pdf/differentiation_c.pdf">問題PDF</a>
     </div>
@@ -90,11 +79,8 @@
 
   <div class="card">
     <div class="title">
-      <strong>接線｜理解度チェック</strong>
-      <span class="tag">問題</span>
-      <span class="tag">練習</span>
+      <strong>接線</strong>
     </div>
-
     <div class="links">
      <a href="./pdf/tangent_line_c.pdf">問題PDF</a>
      <span class="seq">|</span>
@@ -141,6 +127,7 @@
 
 </body>
 </html>
+
 
 
 
