--- a/index.html
+++ b/index.html
@@ -42,7 +42,15 @@
   </style>
 </head>
 <body>
-  <h1>PDF保管庫的場</h1>
+<h1>PDF保管庫的場</h1>
+  <div class="card">
+    <div class="title">
+      <strong>組み合わせ</strong>
+    </div>
+    <div class="links">
+      <a href="./pdf/combination_check.pdf">チェックPDF</a>
+    </div>
+  </div>
   
   <div class="card">
     <div class="title">
@@ -127,6 +135,7 @@
 
 </body>
 </html>
+
 
 
 
