--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="links">
      <a href="./pdf/tangent_line_c.pdf">問題PDF</a>
      <span class="seq">|</span>
-     <a href="./pdf/tangent_p.pdf">練習PDF</a>
+     <a href="./pdf/6tan_calc.pdf">練習PDF</a>
     </div>
   </div>
 
@@ -135,6 +135,7 @@
 
 </body>
 </html>
+
 
 
 
