--- a/index.html
+++ b/index.html
@@ -45,10 +45,18 @@
 <h1>PDF保管庫的場</h1>
   <div class="card">
     <div class="title">
-      <strong>組み合わせ</strong>
+      <strong>組み分け</strong>
     </div>
     <div class="links">
       <a href="./pdf/combination_check.pdf">チェックPDF</a>
+    </div>
+  </div>
+  <div class="card">
+    <div class="title">
+      <strong>正四面体</strong>
+    </div>
+    <div class="links">
+      <a href="./pdf/tetra_check.pdf">チェックPDF</a>
     </div>
   </div>
   
@@ -135,6 +143,7 @@
 
 </body>
 </html>
+
 
 
 
