--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
          margin-left:8px;}
   </style>
 </head>
+  
 <body>
 <h1>PDF保管庫的場</h1>
   <div class="card">
@@ -57,6 +58,15 @@
     </div>
     <div class="links">
       <a href="./pdf/tetra_check.pdf">チェックPDF</a>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="title">
+      <strong>最大最小</strong>
+    </div>
+    <div class="links">
+      <a href="./pdf/minmax.pdf">チェックPDF</a>
     </div>
   </div>
   
@@ -143,6 +153,7 @@
 
 </body>
 </html>
+
 
 
 
