--- a/index.html
+++ b/index.html
@@ -1,158 +1,123 @@
 <!doctype html>
 <html lang="ja">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>PDF保管庫的場</title>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="apple-touch-icon" type="180x180" href="apple-touch-icon.png">
-  <style>
-    body{font-family:system-ui, sans-serif;
-         max-width:900px;
-         margin:40px auto;
-         padding:0 16px;
-         line-height:1.6;
-         background:#000;
-         color:#eaeaea;}
-    h1{margin:0 0 12px;}
-    .meta{color:#aaa;
-          font-size:14px;
-          margin-bottom:24px;}
-    .card{border:1px solid #333;
-          border-radius:12px;
-          padding:12px 16px;
-          margin:10px 0;
-          background:#111;
-          box-shadow:0 0 0 1px #222;}
-    .title{margin-bottom:6px;}
-    .links{font-size:14px;}
-    .sep{margin:0 8px;
-         color:#999;}
-    a{color:#7aa2ff;
-      text-decoration:none;}
-    a:hover{text-decoration:underline;}
-    .tag{display:inline-block;
-         font-size:12px;
-         color:#ddd;
-         background:#222;
-         padding:2px 8px;
-         border-radius:999px;
-         margin-left:8px;}
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>PDF保管庫的場</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="apple-touch-icon" type="180x180" href="apple-touch-icon.png">
+<style>
+body{font-family:system-ui, sans-serif; max-width:900px; margin:40px auto; padding:0 16px; line-height:1.6; background:#000; color:#eaeaea;}
+h1{margin:0 0 12px;}
+.meta{color:#aaa; font-size:14px; margin-bottom:24px;}
+.card{border:1px solid #333; border-radius:12px; padding:12px 16px; margin:10px 0; background:#111; box-shadow:0 0 0 1px #222;}
+.title{margin-bottom:6px;}
+.links{font-size:14px;}
+.sep{margin:0 8px; color:#999;}
+a{color:#7aa2ff; text-decoration:none;}
+a:hover{text-decoration:underline;}
+.tag{display:inline-block; font-size:12px; color:#ddd; background:#222; padding:2px 8px; border-radius:999px; margin-left:8px;}
+</style>
 </head>
   
 <body>
 <h1>PDF保管庫的場</h1>
-  <div class="card">
-    <div class="title">
-      <strong>組み分け</strong>
-    </div>
-    <div class="links">
-      <a href="./pdf/combination_check.pdf">チェックPDF</a>
-    </div>
-  </div>
-  <div class="card">
-    <div class="title">
-      <strong>正四面体</strong>
-    </div>
-    <div class="links">
-      <a href="./pdf/tetra_check.pdf">チェックPDF</a>
-    </div>
-  </div>
-
-  <div class="card">
-    <div class="title">
-      <strong>最大最小</strong>
-    </div>
-    <div class="links">
-      <a href="./pdf/minmax.pdf">チェックPDF</a>
-    </div>
-  </div>
   
-  <div class="card">
-    <div class="title">
-      <strong>数列</strong>
-    </div>
-    <div class="links">
-     <a href="./pdf/recurrence_c.pdf">問題PDF</a>
-     <span class="seq">|</span>
-     <a href="./pdf/reccurrence_a.pdf">解答PDF</a>
-    </div>
+<div class="card">
+  <div class="title">
+    <strong>組み分け</strong>
   </div>
+  <div class="links">
+    <a href="./pdf/combination_check.pdf">チェックPDF</a>
+  </div>
+</div>
+  
+<div class="card">
+  <div class="title">
+    <strong>正四面体</strong>
+  </div>
+  <div class="links">
+    <a href="./pdf/tetra_check.pdf">チェックPDF</a>
+  </div>
+</div>
 
-  <div class="card">
-    <div class="title">
-      <strong>対数</strong>
-    </div>
-    <div class="links">
-     <a href="./pdf/log_c.pdf">問題PDF</a>
-     <span class="seq">|</span>
-     <a href="./pdf/log_a.pdf">練習PDF</a>
-     <span class="seq">|</span>
-     <a href="./pdf/log_q.pdf">チェックPDF</a>
-    </div>
+<div class="card">
+  <div class="title">
+    <strong>最大最小</strong>
   </div>
+  <div class="links">
+    <a href="./pdf/minmax_check.pdf">チェックPDF</a>
+  </div>
+</div>
+  
+<div class="card">
+  <div class="title">
+    <strong>数列</strong>
+  </div>
+  <div class="links">
+    <a href="./pdf/recurrence_check.pdf">チェックPDF</a>
+  </div>
+</div>
 
-  <div class="card">
-    <div class="title">
-      <strong>微分</strong>
-    </div>
-    <div class="links">
-     <a href="./pdf/differentiation_c.pdf">問題PDF</a>
-    </div>
+<div class="card">
+  <div class="title">
+    <strong>対数</strong>
   </div>
+  <div class="links">
+    <a href="./pdf/log_quiz.pdf">クイズPDF</a>
+  </div>
+</div>
 
-  <div class="card">
-    <div class="title">
-      <strong>接線</strong>
-    </div>
-    <div class="links">
-     <a href="./pdf/tangent_line_c.pdf">問題PDF</a>
-     <span class="seq">|</span>
-     <a href="./pdf/6tan_calc.pdf">練習PDF</a>
-    </div>
+<div class="card">
+  <div class="title">
+    <strong>微分</strong>
   </div>
+  <div class="links">
+    <a href="./pdf/differentiation_check.pdf">チェックPDF</a>
+  </div>
+</div>
+
+<div class="card">
+  <div class="title">
+    <strong>接線</strong>
+  </div>
+  <div class="links">
+    <a href="./pdf/tangent_line_check.pdf">チェックPDF</a>
+    <span class="seq">|</span>
+    <a href="./pdf/6tan_calc.pdf">計算PDF</a>
+  </div>
+</div>
 
 <!----  
-  <div class="card">
-    <div class="title">
-      <strong>｜理解度チェック</strong>
-      <span class="tag">問題</span>
-      <span class="tag">解答</span>
-    </div>
-
-    <div class="links">
-     <a href="./pdf/_check.pdf">問題PDF</a>
-     <span class="seq">|</span>
-     <a href="./pdf/_answer.pdf">解答PDF</a>
-    </div>
+<div class="card">
+  <div class="title">
+    <strong></strong>
+    <span class="tag"></span>
   </div>
+  <div class="links">
+    <a href="./pdf/_check.pdf">PDF</a>
+    <span class="seq">|</span>
+  </div>
+</div>
 -->
 
 <div class="card">
-    <div class="title">
-      <strong>発展</strong>
-      <span class="tag">発展</span>
-    </div>
-  
-<div class="links">
-     <a href="./pdf/6.pdf">6tanPDF</a>
-    </div>
-    <div class="links">
-     <a href="./pdf/6tan.pdf">6PDF</a>
-    </div>
-<div class="links">
-     <a href="./pdf/6tan2.pdf">tPDF</a>
-    </div>
-  
-    <div class="links">
-     <a href="./pdf/my.pdf">結論PDF</a>
-    </div>
+  <div class="title">
+    <strong>発展</strong>
+    <span class="tag">発展</span>
   </div>
+  <div class="links">
+     <a href="./pdf/6tan.pdf">6tanPDF</a>
+  </div>
+  <div class="links">
+    <a href="./pdf/6tan2.pdf">6tan2PDF</a>
+  </div>
+</div>
 
 </body>
 </html>
+
 
 
 
