--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@ a:hover{text-decoration:underline;}
 <body>
 <h1>PDF保管庫的場</h1>
 
-
+<div class="card">
+  <div class="title">
+    <strong>成績表</strong>
+  </div>
+  <div class="links">
+    <a href="./pdf/hyou.pdf">成績表PDF</a>
+  </div>
+</div>
+  
 <div class="card">
   <div class="title">
     <strong>模試</strong>
@@ -127,6 +135,7 @@ a:hover{text-decoration:underline;}
 
 </body>
 </html>
+
 
 
 
